# PwnDelorean

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.MD  README.md  build.sh  filesystem.go  git.go  main.c  main.go
patterns/: Azure.json  C#.json  Credentials.json  Database.json  Misc.json  blueflower.json  gitrob.json  new.json  test.json
src/: engine.cpp  engine.h  filesystemengine.cpp  filesystemengine.h  gitengine.cpp  gitengine.h  main.cpp  test.cpp  util.h
test/: CMakeLists.txt  all_tests.cpp  engine_tests.cpp  gitengine_tests.cpp  tests.cpp
